# Paisley-Park-Interpreter

./: CHANGELOG.md  README.md  ppi.cabal
interpreter/: ppi.cabal
interpreter/app/: Main.hs
interpreter/src/: Eval.hs  LispVal.hs  Parser.hs  Repl.hs
src/: Cli.hs  Eval.hs  LispVal.hs  Parser.hs  Prim.hs  Repl.hs
