cabal-version:   2.4
name:            ppi
version:         0.1
description:     A Scheme interpreter written in Haskell
author:          Dimitrios Papakonstantinou
maintainer:      Dimitrios Papakonstantinou <papakonstantinou.dm@gmail.com>
license:         MIT 
license-file:    LICENSE 
build-type:      Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

tested-with:     GHC ==8.10.4

source-repository head
  type:     git
  location: https://github.com/Turtel216/Paisley-Park-Interpreter

common common-options
  build-depends:      base >=4.8 && <5.0
  other-modules:      Paths_ppi
  autogen-modules:    Paths_ppi
  ghc-options:
    -Wall -Wextra -Wcompat -Widentities
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -fwrite-ide-info -hiedir=.hie

  --    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-extensions:
    OverloadedStrings
    StrictData

  default-language:   Haskell2010

library
  import:          common-options
  exposed-modules:
    Cli
    Eval
    LispVal
    Parser
    Prim
    Repl

  hs-source-dirs:  src/
  build-depends:
    , containers
    , directory
    , haskeline
    , HTTP
    , mtl
    , optparse-applicative
    , parsec
    , text

executable ppi
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  ppi

test-suite test
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test-hs/Spec/
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , hspec
    , ppi
    , text

test-suite test-golden
  import:          common-options
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  other-modules:   Paths_ppi
  autogen-modules: Paths_ppi
  hs-source-dirs:  test-hs/Golden
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , ppi
    , tasty
    , tasty-golden
    , text
